idioma, e relações de personagens
